# typecats

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.md  CONTRIBUTING.md  LICENSE  Pipfile  README.md  SECURITY.md  env_runner.py  mise.toml  mypy.ini  pyproject.toml  setup.py
.github/: labeler.yml  release-drafter.yml  semantic.yml
.github/workflows/: codeql-analysis.yml  pr-checks.yml  pr-labeler.yml  publish.yml  unit-test.yml
tests/: data_utils.py  detailed_validation_utils.py  test_behavioral.py  test_cats.py  test_coerce_on_setattr.py  test_dispatch_collision.py  test_exceptions.py  test_funcs.py  test_future_annotations.py  test_gen_converter.py  test_inheritance.py  test_optional_unstructure.py  test_python_39.py  test_strip_defaults.py  test_try_struc.py  test_unstruc_any.py  test_validators.py  test_wildcats.py
tests/data/: xoi.json
tests/exceptiongroups/: test_exceptiongroups.py  test_pytest_utils.py
typecats/: __about__.py  __init__.py  __version__.py  _compat.py  attrs_shim.py  cats_mypy_plugin.py  cattrs_hooks.py  coerce.py  constants.py  converter.py  exceptions.py  mypy_plugin.py  patch.py  stack_context.py  strip_defaults.py  tc.py  types.py  wildcat.py
typecats/exceptiongroups/: __init__.py  pytest_utils.py
